swagger erro ajuste
