# app/models/user.rb
@@ -1,9 +1,8 @@
 class User < ApplicationRecord
   has_secure_password
 
-  validates :email, presence: true
+  validates :email, presence: true, uniqueness: true
   validates :password, :password_confirmation, presence: true
-  #validates :password_confirmation, presence: true, if: :password_changed?
 
   private
 
