# config/routes.rb
@@ -5,9 +5,10 @@ Rails.application.routes.draw do
 
   # Defines the root path route ("/")
   # root "articles#index"
+  root to: redirect('/api-docs')
 
   post '/register', to: 'user#register'
   post '/login', to: 'user#login'
-  put '/change_password', to: 'user#change_password'
+  put '/users/:id/update_password', to: 'user#update_password'
 
 end
