# swagger/v1/swagger.yaml
@@ -25,23 +25,19 @@ paths:
             schema:
               type: object
               properties:
-                user:
-                  type: object
-                  properties:
-                    email:
-                      type: string
-                      default: email@email.com
-                    password:
-                      type: string
-                      default: '1234567890'
-                    password_confirmation:
-                      type: string
-                      default: '1234567890'
-                  required:
-                  - email
-                  - status
-                  - password
-                  - password_confirmation
+                email:
+                  type: string
+                  default: email@email.com
+                password:
+                  type: string
+                  default: '1234567890'
+                password_confirmation:
+                  type: string
+                  default: '1234567890'
+              required:
+              - email
+              - password
+              - password_confirmation
   "/login":
     post:
       summary: login
@@ -51,7 +47,7 @@ paths:
       - name: email
         in: query
         description: Email
-        value: test@admin.com
+        value: email@email.com
         schema:
           type: string
       - name: password
@@ -68,8 +64,41 @@ paths:
               examples:
                 example_0:
                   value:
-                    message: Login efetuado com sucesso!
-                    token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJlbWFpbCI6ImFkbWluQGFkbWluLmNvbSIsImV4cGlyZXNfaW4iOjE3MTY3MzUwMjd9.2hkpiKetoXcMPN10g2w24GT8DbzHThAhlx07qy9LXug
+                    token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoyfQ.cur2kIbFqR8WAnjVG9uuFrs-kEmllisZ-tRU-h8DD0w
+  "/users/{id}/update_password":
+    put:
+      summary: update password
+      tags:
+      - Change Password
+      parameters:
+      - name: id
+        in: path
+        description: User ID
+        required: true
+        value: '1'
+        schema:
+          type: string
+      - name: password
+        in: query
+        description: New Password
+        required: true
+        schema:
+          type: string
+      - name: password_confirmation
+        in: query
+        description: New Password Confirmation
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              examples:
+                example_0:
+                  value:
+                    message: Senha atualizada com sucesso
 components:
   securitySchemes:
     Bearer:
